--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -3,7 +3,7 @@
 }
 
 @font-face {
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-weight: 400;
   src: url(../fonts/Roboto-Regular.woff2) format('woff2');
   font-style: normal;
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-weight: 500;
   src: url(../fonts/Roboto-Medium.woff2) format('woff2');
   font-style: normal;
@@ -19,22 +19,25 @@
 }
 
 @font-face {
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-weight: 600;
   src: url(../fonts/Roboto-Bold.woff2) format('woff2');
   font-style: normal;
   font-display: swap;
 }
 
- body {
-   margin: 0;
-   -o-object-fit: cover;
-   width: 100vw;
-   height: 100vh;
-   font-family: 'Roboto', 'Arial', sans-serif;
- }
+body {
+  margin: 0;
+  -o-object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  font-family: 'Roboto', 'Arial', sans-serif;
+}
 
- a {
-   text-decoration: none;
- }
+a {
+  text-decoration: none;
+}
 
+.no-scroll {
+  overflow: hidden;
+}
